Fix: problem where nav toggle button was not showing hamburger menu

--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -131,7 +131,7 @@
 
     &__bar {
       height: 4px;
-      width: 100%;
+      width: 3.5rem;
       background-color: $color-font-nav;
       border-radius: 10px;
     }
